# Ripple

./: .gitignore  BTC_values.txt  CMakeLists.txt  CurrencyController.cpp  CurrencyController.h  DecisionMaker.cpp  DecisionMaker.h  Makefile  MarketAccessProvider.cpp  MarketAccessProvider.h  XRP_values.txt  connector.cpp  data.txt  main.cpp  trader  values.txt
MarketProvider/: FileMarketProvider.cpp  FileMarketProvider.h  IAccessProvider.cpp  IAccessProvider.h  MarketAccessProvider.cpp  MarketAccessProvider.h
